feat(core): implement dynamic UserPortfolio storage and realtime balance sync websocket channel